crates/macro/ui-tests/pub-not-copy.stderr
error[E0277]: the trait bound `std::string::String: std::marker::Copy` is not satisfied
 --> $DIR/pub-not-copy.rs:5:16
  |
3 | #[wasm_bindgen]
  | ---------------
  | |
  | required by this bound in `__wbg_get_a_field::assert_copy`
4 | pub struct A {
5 |     pub field: String,
  |                ^^^^^^ the trait `std::marker::Copy` is not implemented for `std::string::String`
